Added CAST content to BE4

--- a/BE4 - CAST.ipynb
+++ b/BE4 - CAST.ipynb
@@ -201,6 +201,243 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e27cbeed-a647-4932-b81d-8a50282a9798",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib widget\n",
+    "from cast.core.process import CastProcess\n",
+    "process = CastProcess()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8874af93-5f51-4763-a823-67a0dc852ae1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evolution du trafic aérien par catégorie et par décennie [%]\n",
+    "process.parameters.growth_rate_2020_2030_short_range = 3.0\n",
+    "process.parameters.growth_rate_2030_2040_short_range = 3.0\n",
+    "process.parameters.growth_rate_2040_2050_short_range = 3.0\n",
+    "process.parameters.growth_rate_2020_2030_medium_range = 3.0\n",
+    "process.parameters.growth_rate_2030_2040_medium_range = 3.0\n",
+    "process.parameters.growth_rate_2040_2050_medium_range = 3.0\n",
+    "process.parameters.growth_rate_2020_2030_long_range = 3.0\n",
+    "process.parameters.growth_rate_2030_2040_long_range = 3.0\n",
+    "process.parameters.growth_rate_2040_2050_long_range = 3.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7db8993e-204b-4c77-b232-d3687b89b45a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Amélioration de l'efficacité énergétique des avions via le taux de remplissage\n",
+    "\n",
+    "## Valeur du taux de remplissage en 2050 [%]\n",
+    "process.parameters.load_factor_end_year = 85"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20738344-a807-4df9-945e-4b4f4b6aeb5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Amélioration de l'efficacité énergétique des avions via le renouvellement de flotte\n",
+    "\n",
+    "## Avions de type Drop-in Fuel\n",
+    "## Amélioration annuelle moyenne par catégorie [%]\n",
+    "process.parameters.energy_per_ask_short_range_dropin_fuel_gain = 2.0\n",
+    "process.parameters.energy_per_ask_medium_range_dropin_fuel_gain = 2.0\n",
+    "process.parameters.energy_per_ask_long_range_dropin_fuel_gain = 2.0\n",
+    "\n",
+    "## Avions de type Hydrogène\n",
+    "### Valeurs pour régler les fonctions sigmoïdes par catégorie\n",
+    "process.parameters.hydrogen_final_market_share_short_range = 20.0  # [%]\n",
+    "process.parameters.hydrogen_introduction_year_short_range = 2051\n",
+    "process.parameters.hydrogen_final_market_share_medium_range = 20.0  # [%]\n",
+    "process.parameters.hydrogen_introduction_year_medium_range = 2051\n",
+    "process.parameters.hydrogen_final_market_share_long_range = 20.0  # [%]\n",
+    "process.parameters.hydrogen_introduction_year_long_range = 2051\n",
+    "process.parameters.fleet_renewal_duration = 25.0\n",
+    "### Amélioration annuelle moyenne par catégorie [%]\n",
+    "process.parameters.energy_per_ask_short_range_hydrogen_gain = 2.0\n",
+    "process.parameters.energy_per_ask_medium_range_hydrogen_gain = 2.0\n",
+    "process.parameters.energy_per_ask_long_range_hydrogen_gain = 2.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6a9a27f-546a-48fe-8b83-64181d36216a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Amélioration de l'efficacité énergétique des avions via les opérations\n",
+    "\n",
+    "## Valeurs pour régler la fonction sigmoïde\n",
+    "process.parameters.operations_final_gain = 10.0  # [%]\n",
+    "process.parameters.operations_start_year = 2030\n",
+    "process.parameters.operations_duration = 30.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78be3f76-7084-4d54-bdbb-43277d6db679",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Introduction de carburants drop-in alternatifs\n",
+    "\n",
+    "## Part des carburants dans le mix des carburants drop-in (le reste étant complété par du kérosène) [%]\n",
+    "process.parameters.biofuel_share_2030 = 0.0\n",
+    "process.parameters.biofuel_share_2040 = 0.0\n",
+    "process.parameters.biofuel_share_2050 = 20.0\n",
+    "process.parameters.electrofuel_share_2030 = 0.0\n",
+    "process.parameters.electrofuel_share_2040 = 0.0\n",
+    "process.parameters.electrofuel_share_2050 = 30.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84217094-d6b0-4f7c-a46f-a773ef2f421b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Limites environnementales\n",
+    "\n",
+    "## Budgets carbone [GtCO2]\n",
+    "process.parameters.net_carbon_budget = 900.\n",
+    "process.parameters.carbon_dioxyde_removal_2100 = 100.\n",
+    "\n",
+    "## Ressources énergétiques disponibles en 2050 [EJ]\n",
+    "process.parameters.waste_biomass = 12\n",
+    "process.parameters.crops_biomass = 63\n",
+    "process.parameters.forest_residues_biomass = 17\n",
+    "process.parameters.agricultural_residues_biomass = 57\n",
+    "process.parameters.algae_biomass = 15\n",
+    "process.parameters.available_electricity = 300."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbebc254-dbb6-469e-b277-e3036cf581cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Règles d'allocation\n",
+    "\n",
+    "## Part allouée à l'aviation du budget carbone (équivalent) [%]\n",
+    "process.parameters.aviation_carbon_budget_allocated_share = 2.6\n",
+    "process.parameters.aviation_equivalentcarbonbudget_allocated_share = 5.1\n",
+    "\n",
+    "## Part allouée à l'aviation des ressources énergétiques (biomasse et électricité) [%]\n",
+    "process.parameters.aviation_biomass_allocated_share = 3.\n",
+    "process.parameters.aviation_electricity_allocated_share = 3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45cea4e2-1c74-4cae-be00-8d1e9af516d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Réglages environnementaux divers\n",
+    "\n",
+    "## Facteurs d'émission pour l'électricité par décennie (valeur en 2019 : 429 gCO2/kWh)\n",
+    "process.parameters.electricity_emission_factor_2030 = 429\n",
+    "process.parameters.electricity_emission_factor_2040 = 100\n",
+    "process.parameters.electricity_emission_factor_2050 = 100\n",
+    "\n",
+    "## Part des méthodes de production de l'hydrogène par décennie (le reste étant complété par de la production via du charbon) [%]\n",
+    "### Répartition en 2019 : Gaz sans CCS (71%), Charbon sans CCS (27%), Electrolyse (2%), Autres avec CCS (0%)\n",
+    "process.parameters.hydrogen_electrolysis_share_2030: float = 2.0\n",
+    "process.parameters.hydrogen_electrolysis_share_2040: float = 2.0\n",
+    "process.parameters.hydrogen_electrolysis_share_2050: float = 2.0\n",
+    "process.parameters.hydrogen_gas_ccs_share_2030: float = 0.0\n",
+    "process.parameters.hydrogen_gas_ccs_share_2040: float = 0.0\n",
+    "process.parameters.hydrogen_gas_ccs_share_2050: float = 0.0\n",
+    "process.parameters.hydrogen_coal_ccs_share_2030: float = 0.0\n",
+    "process.parameters.hydrogen_coal_ccs_share_2040: float = 0.0\n",
+    "process.parameters.hydrogen_coal_ccs_share_2050: float = 0.0\n",
+    "process.parameters.hydrogen_gas_share_2030: float = 71.0\n",
+    "process.parameters.hydrogen_gas_share_2040: float = 71.0\n",
+    "process.parameters.hydrogen_gas_share_2050: float = 71.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6621e9ff-110e-414f-866a-4adfd55d7a4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process.compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b828168-ff69-481b-9d9b-6f1c36da84ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pour afficher les résultats en détail\n",
+    "# process.df # To print output vectors\n",
+    "# process.float_outputs # To print output float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f32f3800-e03a-4052-9aff-813f9a890f1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process.plot_co2_emissions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67759e9a-1113-4db5-8a10-337a11bcbc35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process.plot_radar_plot()\n",
+    "\n",
+    "# Pour afficher plus en détail les différentes limites environnementales\n",
+    "# process.plot_carbon_budget()\n",
+    "# process.plot_equivalent_carbon_budget()\n",
+    "# process.plot_biomass_budget()\n",
+    "# process.plot_electricity_budget()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "494365f2-8180-4dbc-8d07-d50d41b325e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process.plot_emission_factor_per_fuel()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5dcba251-c2a5-4671-8fb1-47c61cdb7a8b",
    "metadata": {},
@@ -228,7 +465,7 @@
    "id": "054fadb2-2b98-4b4a-b697-b13bc68284f8",
    "metadata": {},
    "source": [
-    "Pour terminer, choisissez, parmi tous les scénarios que vous avez pu développer, un scénario durable pour l'aviation que vous présenterez aux autres étudiants. Vous devrez présenter les hypothèses mondiales globales (objectif de température, capture et stockage de carbone, mix électrique...), la trajectoire des émissions de CO<sub>2</sub>, la part du budget carbone consommé correspondante, les résultats en terme de température (en incluant les effets non-CO<sub>2</sub>) et les consommations énergétiques avec les parts allouées correspondantes pour la biomasse et l'électricité."
+    "Pour terminer, choisissez, parmi tous les scénarios que vous avez pu développer, un scénario durable pour l'aviation que vous présenterez aux autres étudiants. Vous devrez présenter les hypothèses mondiales globales (objectif de température, capture et stockage de carbone, mix électrique...), la trajectoire des émissions de CO<sub>2</sub>, la part du budget carbone consommé correspondante et les consommations énergétiques avec les parts allouées correspondantes pour la biomasse et l'électricité. Même si des leviers ne sont pas considérés dans ces scénarios, vous pouvez aussi analyser les résultats en terme de température via les émissions équivalentes,"
    ]
   },
   {
@@ -264,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
