Removed widgets usage for plots

--- a/BE4 - CAST.ipynb
+++ b/BE4 - CAST.ipynb
@@ -209,7 +209,8 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib widget\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=Warning)\n",
     "from cast.core.process import CastProcess\n",
     "process = CastProcess()"
    ]
